--- a/IMDBscraper/package.json
+++ b/IMDBscraper/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "mongodb": "^3.6.0",
     "mongoose": "^5.10.0",
     "objects-to-csv": "^1.3.6"
